update main texts

--- a/reference.bib
+++ b/reference.bib
@@ -18,6 +18,25 @@
   year    = {2019}
 }
 
+@article{du2020deep,
+  title     = {Deep Reinforcement Learning for Option Replication and Hedging},
+  author    = {Du, Jiayi and Jin, Muyang and Kolm, Petter N and Ritter, Gordon and Wang, Yixuan and Zhang, Bofei},
+  journal   = {The Journal of Financial Data Science},
+  year      = {2020},
+  publisher = {Institutional Investor Journals Umbrella}
+}
+
+@article{gendreau2019cvar,
+  title     = {CVaR-LASSO Enhanced Index Replication (CLEIR): outperforming by minimizing downside risk},
+  author    = {Gendreau, Brian and Jin, Yong and Nimalendran, Mahendrarajah and Zhong, Xiaolong},
+  journal   = {Applied Economics},
+  volume    = {51},
+  number    = {52},
+  pages     = {5637--5651},
+  year      = {2019},
+  publisher = {Taylor \& Francis}
+}
+
 @article{hutchinson1994nonparametric,
   title     = {A nonparametric approach to pricing and hedging derivative securities via learning networks},
   author    = {Hutchinson, James M and Lo, Andrew W and Poggio, Tomaso},
@@ -27,6 +46,28 @@
   pages     = {851--889},
   year      = {1994},
   publisher = {Wiley Online Library}
+}
+
+@article{kolm2019dynamic,
+  title     = {Dynamic replication and hedging: A reinforcement learning approach},
+  author    = {Kolm, Petter N and Ritter, Gordon},
+  journal   = {The Journal of Financial Data Science},
+  volume    = {1},
+  number    = {1},
+  pages     = {159--171},
+  year      = {2019},
+  publisher = {Institutional Investor Journals Umbrella}
+}
+
+@article{malliaris1993neural,
+  title     = {A neural network model for estimating option prices},
+  author    = {Malliaris, Mary and Salchenberger, Linda},
+  journal   = {Applied Intelligence},
+  volume    = {3},
+  number    = {3},
+  pages     = {193--206},
+  year      = {1993},
+  publisher = {Springer}
 }
 
 @article{ruf2020neural,
@@ -41,4 +82,11 @@
   author  = {Ruf, Johannes and Wang, Weiguan},
   journal = {Available at SSRN},
   year    = {2020}
+}
+
+@article{wiese2019deep,
+  title   = {Deep hedging: learning to simulate equity option markets},
+  author  = {Wiese, Magnus and Bai, Lianjun and Wood, Ben and Buehler, Hans},
+  journal = {Available at SSRN 3470756},
+  year    = {2019}
 }
